--- a/relecloud/templates/index.html
+++ b/relecloud/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <title>DiscoverI - by David Ponce</title>
+    <title>My Mind - by Dave</title>
 
     <link href="{% static 'res/css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'res/css/fontawesome.css' %}">
@@ -176,8 +176,8 @@
                     <div class="row">
                         <div class="col-lg-7">
                             <div class="header-text">
-                                <h6>Welcome</h6>
-                                <h4><em>Discover</em> My Vision: A Journey Through My Work</h4>
+                                <h6>welcome to my humble abode.</h6>
+                                <h4><em></em> How does ones mind work?</h4>
                             </div>
                         </div>
                         <div class="col-lg-5">
@@ -185,10 +185,10 @@
                                 <div class="card-container">
                                     <div class="card">
                                         <div class="first-content">
-                                            <span><br>Recruiters!</br>Click Me!</br></span>
+                                            <span><br>Recruiters,</br>Click Me</br></span>
                                         </div>
                                         <div class="second-content">
-                                            <span> <li><a href="{% url 'about_me:about' %}">Resume!</a></span>
+                                            <span> <li><a href="{% url 'about_me:about' %}">Resume</a></span>
                                         </div>
                                     </div>
                                 </div>
