--- a/relecloud/templates/index.html
+++ b/relecloud/templates/index.html
@@ -176,7 +176,7 @@
                     <div class="row">
                         <div class="col-lg-7">
                             <div class="header-text">
-                                <h6>welcome to my humble abode.</h6>
+                                <h6>Welcome to my humble abode.</h6>
                                 <h4><em></em> How does ones mind work?</h4>
                             </div>
                         </div>
