--- a/about_me/templates/about.html
+++ b/about_me/templates/about.html
@@ -53,7 +53,7 @@
   <div class="contIn">
     <div class="section middle clearfix">
       <div class="job">
-        <h2>FreeCast.Inc<i class="fa fa-minus openBtn open"></i><span>August 2023 - Present</span></h2>
+        <h2>Stark Tech<i class="fa fa-minus openBtn open"></i><span>August 2024 - Present</span></h2>
         <p><strong>Orlando, Fl<br/></strong>Position: </strong>BAS Software Engineer<br/><strong>Description: </strong>Developer of BAS and Embeded Software for commercial and miliatry use. <br/>
           <span class="brag" style="font-size: smaller;">
           <br>
@@ -84,7 +84,7 @@
   <div class="contIn">
     <div class="section middle clearfix">
       <div class="job">
-        <h2>FreeCast.Inc<i class="fa fa-minus openBtn open"></i><span>August 2023 - Present</span></h2>
+        <h2>FreeCast.Inc<i class="fa fa-minus openBtn open"></i><span>August 2023 - 2024</span></h2>
         <p><strong>Orlando, Fl<br/></strong>Position: </strong>Data Developer<br/><strong>Description: </strong>Developed Mobile and Web Application data managemnet tools; including storing and manipulating. <br/>
           <span class="brag" style="font-size: smaller;">
           <br>
