--- a/about_me/templates/about.html
+++ b/about_me/templates/about.html
@@ -18,7 +18,7 @@
       <div class="logoCont"><img class="logo" src="{% static 'res/img/375208288_686603562977098_3186213666988680908_n.jpg' %}"/></div>
       <h1>David Ponce</h1>
       <div class="moreInfo">
-        <p><br/>Orlando, Fl<br/>DavidAdanPonce@outlook.com<br/>407 219 6580<br/><a href="https://discoveri.azurewebsites.net/" target="_blank">Discoverii &amp; By David</a></p>
+        <p><br/>Orlando, Fl<br/>DavidAdanPonce@outlook.com<br/><br/><a href="https://discoveri.azurewebsites.net/" target="_blank">Discoverii &amp; By David</a></p>
       </div>
       <p class="tagline">Software Engineer<br/>Computer Engineer<br/><span>App Development &amp; Embedded Development</span></p>
     </div>
