--- a/relecloud/templates/index.html
+++ b/relecloud/templates/index.html
@@ -92,7 +92,7 @@
   <div class="container">
     <h1>I'm building something great</h1>
     <p>
-      My website is currently under construction.<br />
+      App is currently under construction.<br />
       Please check back soon. Thank you - David
     </p>
     <div>
